--- a/Server/src/main/resources/application.yml
+++ b/Server/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
     datasource:
-        url: jdbc:postgresql://localhost:5432/jwt_security
+        url: jdbc:postgresql://localhost:5432/school_manage_system
         username: postgres
         password: 12345
         driver-class-name: org.postgresql.Driver
