--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.rocket</groupId>
 	<artifactId>School_Manage_System</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
